--- a/ncweb3.html
+++ b/ncweb3.html
@@ -1,3 +1,11 @@
+/my-website
+    /images
+    /css
+        style.css
+    /js
+        script.js
+    index.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
