--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome page for Computer Engineering students at MTI. Find resources and syllabus for your first semester.">
     <title>Welcome Freshers</title>
     <style>
         /* Ensure the video covers the entire background */
@@ -33,7 +32,6 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         header {
-           
             color: #fff;
             padding: 10px 0;
             text-align: center;
@@ -63,15 +61,19 @@
             font-size: 0.9em;
             color: #555;
         }
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
     <!-- Background Video -->
-    <video class="video-background" autoplay muted loop>
+    <video class="video-background" autoplay muted loop aria-label="Background Video">
         <source src="vid.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-
 
     <header>
         <h1>Welcome Freshers</h1>
@@ -84,26 +86,22 @@
 
             <div class="resources">
                 <h2>What to Expect in First Semester</h2>
-                <p>As a computer engineering student, you will explore a variety of topics, To help you get started, here are the list of the subjects with the syllabus you are going to study:</p>
+                <p>As a computer engineering student, you will explore a variety of topics. To help you get started, here are the subjects with their syllabi:</p>
                 <ul>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1001" target="_blank">Communication Skills in English</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1002" target="_blank">Mathematics I</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1003" target="_blank">Applied Physics I</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1004" target="_blank">Applied Chemistry</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1005" target="_blank">Engineering Graphics</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=2006" target="_blank">Applied Physics Lab</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1007" target="_blank">Applied Chemistry Lab</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1008" target="_blank">Introduction to IT systems Lab</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=2009" target="_blank">Engineering Workshop Practice</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1009" target="_blank">Sports and Yoga</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1001" target="_blank" rel="noopener">Communication Skills in English</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1002" target="_blank" rel="noopener">Mathematics I</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1003" target="_blank" rel="noopener">Applied Physics I</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1004" target="_blank" rel="noopener">Applied Chemistry</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1005" target="_blank" rel="noopener">Engineering Graphics</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=2006" target="_blank" rel="noopener">Applied Physics Lab</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1007" target="_blank" rel="noopener">Applied Chemistry Lab</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1008" target="_blank" rel="noopener">Introduction to IT Systems Lab</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=2009" target="_blank" rel="noopener">Engineering Workshop Practice</a></li>
+                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1009" target="_blank" rel="noopener">Sports and Yoga</a></li>
                 </ul>
             </div>
-        <p>Be prepared for a rigorous but rewarding journey filled with challenging projects and collaborative experiences.</p>
-        <pre>
-
-        </pre>
-        <p> Good Luck with Your Studies - ചേട്ടന്മാർ & ചേച്ചിമാർ of <a href="https://www.instagram.com/ct_zenocx?igsh=MTVmMDdjamY1YzY5YQ=="target="_blank">Ct_zenocs</a></p>
-
+            <p>Be prepared for a rigorous but rewarding journey filled with challenging projects and collaborative experiences.</p>
+            <p>Good luck with your studies - <a href="https://www.instagram.com/ct_zenocx?igsh=MTVmMDdjamY1YzY5YQ==" target="_blank" rel="noopener">Ct_zenocs</a></p>
         </div>
 
         <footer>
