--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             margin: 0;
             padding: 0;
             color: #333;
-            overflow: hidden; /* Prevent scrolling */
+            overflow: auto; /* Allow scrolling */
         }
         .container {
             max-width: 800px;
