--- a/index.html
+++ b/index.html
@@ -1,112 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome page for Computer Engineering students at MTI. Find resources and syllabus for your first semester.">
-    <title>Welcome Freshers</title>
-    <style>
-        /* Ensure the video covers the entire background */
-        .video-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-            background: #000;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            overflow: auto; /* Allow scrolling */
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9); /* Slightly transparent background */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        header {
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-        }
-        h2 {
-            color: #007bff;
-        }
-        .content {
-            margin-top: 20px;
-        }
-        .resources {
-            margin-top: 20px;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            margin-top: 20px;
-            text-align: center;
-            font-size: 0.9em;
-            color: #555;
-        }
-        @media (max-width: 768px) {
-            .container {
-                padding: 10px;
-            }
-        }
-    </style>
+    <title>Frames Example with Side Frame</title>
 </head>
-<body>
-    <!-- Background Video -->
-    <video class="video-background" autoplay muted loop aria-label="Background Video">
-        <source src="vid.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <header>
-        <h1>Welcome Freshers</h1>
-    </header>
-    
-    <div class="container">
-        <div class="content">
-            <h2>Welcome To Computer Engineering MTI</h2>
-            <p>We are excited to have you join the world of computer engineering! This field is a fascinating blend of computer science, offering endless opportunities for innovation and problem-solving.</p>
-
-            <div class="resources">
-                <h2>What to Expect in First Semester</h2>
-                <p>As a computer engineering student, you will explore a variety of topics. To help you get started, here are the subjects with their syllabi:</p>
-                <ul>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1001" target="_blank" rel="noopener">Communication Skills in English</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1002" target="_blank" rel="noopener">Mathematics I</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1003" target="_blank" rel="noopener">Applied Physics I</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1004" target="_blank" rel="noopener">Applied Chemistry</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1005" target="_blank" rel="noopener">Engineering Graphics</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=2006" target="_blank" rel="noopener">Applied Physics Lab</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1007" target="_blank" rel="noopener">Applied Chemistry Lab</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1008" target="_blank" rel="noopener">Introduction to IT Systems Lab</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=2009" target="_blank" rel="noopener">Engineering Workshop Practice</a></li>
-                    <li><a href="https://sitttrkerala.ac.in/index.php?r=site%2Fdiploma-syllabus-course-contents&course=1009" target="_blank" rel="noopener">Sports and Yoga</a></li>
-                </ul>
-            </div>
-            <p>Be prepared for a rigorous but rewarding journey filled with challenging projects and collaborative experiences.</p>
-            <p>Good luck with your studies - <a href="https://www.instagram.com/ct_zenocx?igsh=MTVmMDdjamY1YzY5YQ==" target="_blank" rel="noopener">Ct_zenocs</a></p>
-        </div>
-
-        <footer>
-            <p>&copy; 2024 Ct_zenocs. All rights reserved.</p>
-        </footer>
-    </div>
-</body>
+<frameset rows="150, *, 70">
+    <frame name="top" src="topframe.html" />
+    <frameset cols="200, *">
+        <frame name="side" src="sideframe.html" />
+        <frame name="main" src="mainframe.html" scrolling="yes" />
+    </frameset>
+    <frame src="bottomframe.html" scrolling="no" />
+</frameset>
 </html>
